// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Spinner > should render 1`] = `
<div>
  <div
    class="css-1ppx3l2"
    color="info"
  />
</div>
`;

exports[`Spinner > should render a danger color 1`] = `
<div>
  <div
    class="css-15wc910"
    color="danger"
  />
</div>
`;

exports[`Spinner > should render a hint color 1`] = `
<div>
  <div
    class="css-e7k19c"
    color="hint"
  />
</div>
`;

exports[`Spinner > should render a info color 1`] = `
<div>
  <div
    class="css-1ppx3l2"
    color="info"
  />
</div>
`;

exports[`Spinner > should render a large one 1`] = `
<div>
  <div
    class="css-28aba5"
    color="info"
  />
</div>
`;

exports[`Spinner > should render a small one 1`] = `
<div>
  <div
    class="css-v1kihw"
    color="info"
  />
</div>
`;

exports[`Spinner > should render a success color 1`] = `
<div>
  <div
    class="css-1r3tpd5"
    color="success"
  />
</div>
`;

exports[`Spinner > should render a warning color 1`] = `
<div>
  <div
    class="css-gdz11m"
    color="warning"
  />
</div>
`;

exports[`Spinner > should render a warning-alt color 1`] = `
<div>
  <div
    class="css-goj9mo"
    color="warning-alt"
  />
</div>
`;
